--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "compile": "tsc",
+    "generate": "graphql-codegen",
     "start": "npm run compile && node ./dist/index.js"
   },
   "repository": {
