--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "graphql-tag": "^2.12.6"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^4.0.0",
+    "@graphql-codegen/typescript": "^4.0.0",
+    "@graphql-codegen/typescript-resolvers": "^4.0.0",
     "@types/node": "^20.2.5",
     "typescript": "^5.0.4"
   }
